Un peu de style pour le carousel.

--- a/src/themes/calypso/app/home-page/vedette-liste/vedette-liste.component.html
+++ b/src/themes/calypso/app/home-page/vedette-liste/vedette-liste.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="images$ | async as images; else loading">
     <ngb-carousel>
       <ng-template ngbSlide *ngFor="let image of images">
-        <img [src]="image.imageUrl" class="d-block w-100" alt="{{ image.title }}">
+        <img [src]="image.imageUrl" class="d-block w-100 vedette-home" alt="{{ image.title }}">
         <div class="carousel-caption">
           <h3>{{ image.title }}</h3>
           <p>{{ image.description }}</p>
