Ajout du composant permettant l'affichage des éléments vedette d'une collection. De plus, une fonctionnalité a été intégrée aux services pour afficher aléatoirement des objets d'images. Ces objets peuvent être récupérés directement depuis l'API ou depuis le cache, offrant ainsi une flexibilité dans la source des données.

--- a/src/themes/calypso/app/home-page/home-news/home-news.component.html
+++ b/src/themes/calypso/app/home-page/home-news/home-news.component.html
@@ -1,10 +1,11 @@
-<div class="jumbotron jumbotron-fluid mt-ncs">
+<div class="jumbotron jumbotron-fluid mt-ncs ">
   <div class="container">
-    <div class="d-flex flex-wrap">
+    <div class="d-flex flex-wrap mt-0 mb-0 pt-0 pb-0">
       <div>
         <h1 class="display-3">Calypso</h1>
         <p class="lead">DSpace is the world leading open source repository platform that enables organisations to:</p>
       </div>
     </div>
   </div>
+  <ds-vedette-liste></ds-vedette-liste>
 </div>
