Ce composant Angular étend le composant de base de la liste des communautés et affiche les communautés de niveau supérieur ainsi que leurs collections associées. Il utilise l'API DSpace 7 pour récupérer les données des communautés et des collections. De plus, il s'intègre à un service Vedette pour récupérer et afficher les images associées à chaque collection. #### Fonctionnalités : - Chargement dynamique des données des communautés et des collections. - Récupération asynchrone des images de collection à l'aide du service Vedette.

--- a/src/themes/calypso/app/home-page/vedette-liste/vedette-liste.component.html
+++ b/src/themes/calypso/app/home-page/vedette-liste/vedette-liste.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="images$ | async as images; else loading">
+<ng-container *ngIf="images$ | async as images">
   <ngb-carousel>
     <ng-template ngbSlide *ngFor="let image of images">
       <img [src]="image.imageUrl" class="d-block w-100 vedette-home" alt="{{ image.title }}">
@@ -9,4 +9,3 @@
     </ng-template>
   </ngb-carousel>
 </ng-container>
-<ng-template #loading>...</ng-template>
