--- a/src/themes/calypso/app/shared/browse-by/browse-by.component.html
+++ b/src/themes/calypso/app/shared/browse-by/browse-by.component.html
@@ -1,14 +1,18 @@
 <ng-container *ngVar="(objects$ | async) as objects">
-  <h1 [ngClass]="{'sr-only': parentname }">{{title | translate}}</h1>
-  <ng-container *ngComponentOutlet="getStartsWithComponent(); injector: objectInjector;"></ng-container>
+  <h1 *ngIf="displayTitle">{{title | translate}}</h1>
+  <ds-starts-with-loader [paginationId]="paginationConfig?.id" [startsWithOptions]="startsWithOptions" [type]="type">
+  </ds-starts-with-loader>
   <div *ngIf="objects?.hasSucceeded && !objects?.isLoading && objects?.payload?.page.length > 0" @fadeIn>
     <div *ngIf="shouldDisplayResetButton$ |async" class="mb-2 reset">
       <ds-themed-results-back-button [back]="back" [buttonLabel]="buttonLabel"></ds-themed-results-back-button>
     </div>
+
     <!-- Bouton permettant de basculer entre les modes d'affichage en liste et en mosaïque. -->
     <div class="mt-10 mb-10">
       <ds-view-mode-switch></ds-view-mode-switch>
     </div>
+    <!-- Fin Bouton  -->
+
     <ds-viewable-collection
       [config]="paginationConfig"
       [sortConfig]="sortConfig"
