--- a/src/themes/calypso/styles/_theme_css_variable_overrides.scss
+++ b/src/themes/calypso/styles/_theme_css_variable_overrides.scss
@@ -4,8 +4,8 @@
   --ds-header-logo-height: 40px;
   --ds-banner-text-background: rgba(0, 0, 0, 0.45);
   --ds-banner-background-gradient-width: 300px;
-  --ds-home-news-link-color: #{$green};
-  --ds-home-news-link-hover-color: #{darken($green, 15%)};
-  --ds-header-navbar-border-bottom-color: #{$green};
+  --ds-home-news-link-color: #{$blue};
+  --ds-home-news-link-hover-color: #{darken($cyan, 15%)};
+  --ds-header-navbar-border-bottom-color: #{$blue};
 }
 
