--- a/src/themes/calypso/app/clip-search/clip-search.component.scss
+++ b/src/themes/calypso/app/clip-search/clip-search.component.scss
@@ -19,7 +19,7 @@
     li {
       display: none;
       list-style: none;
-      margin: 0 10px 10px 0;
+      margin: 0 10px 15px 0;
       max-width: 100%;
 
       a, button {
@@ -34,6 +34,9 @@
         text-decoration: none;
         white-space: nowrap;
         overflow: hidden;
+      }
+      .fm-2 {
+        margin-top: 2px;
       }
     }
   }
