--- a/src/themes/calypso/app/clip-search/clip-search.component.html
+++ b/src/themes/calypso/app/clip-search/clip-search.component.html
@@ -1,6 +1,9 @@
 <section id="galerie">
   <div class="container">
-    <div class="row justify-content-center">
+    <button class="btn btn-secondary btn-sm mt-3" (click)="retour()">
+      <i class="fas fa-arrow-left ng-tns-c242-3"></i> {{ 'calypso.retour' | translate }}
+    </button>
+    <div class="row">
         <div class="clip-titre">
           <h1>{{ 'calypso.clip-search-title' | translate }}</h1>
           <p>{{ 'calypso.clip-search-description' | translate }}</p>
