Activer des paramètres dans l'URL qui correspondent aux onglets actifs.

--- a/src/themes/calypso/app/clip-search/clip-search.component.html
+++ b/src/themes/calypso/app/clip-search/clip-search.component.html
@@ -45,12 +45,12 @@
       </ng-container>
 
       <ng-template #loading class="mt-5">
-        <!-- Indicateur de chargement ou tout autre contenu à afficher pendant le chargement des données -->
-        <div class="spinner-grow text-info"></div>
-        <div class="spinner-grow text-info"></div>
-        <div class="spinner-grow text-info"></div>
-        <div class="spinner-grow text-info"></div>
-        <div class="spinner-grow text-info"></div>
+        <!-- Indicateur de chargement -->
+        <div class="spinner-grow-sm text-info"></div>
+        <div class="spinner-grow-sm text-info"></div>
+        <div class="spinner-grow-sm text-info"></div>
+        <div class="spinner-grow-sm text-info"></div>
+        <div class="spinner-grow-sm text-info"></div>
       </ng-template>
     </div>
   </div>
