--- a/src/themes/calypso/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/calypso/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -1,6 +1,7 @@
 <ds-themed-results-back-button *ngIf="showBackButton | async" [back]="back"></ds-themed-results-back-button>
 <div class="align-items-end">
-  <img src="/assets/calypso/images/ia3.png" alt="Clip recherche Calypso" title="Rechercher avec CLIP " class="calypso-img-ia float-right ml-1" (click)="openDialog(content)">
+  <!-- Icon made by Pixel perfect from www.flaticon.com -->
+  <img src="/assets/calypso/images/ai.png" alt="Clip recherche Calypso" title="Rechercher avec CLIP " class="calypso-img-ia float-right ml-1" (click)="openDialog(content)">
 </div>
 <!-- Définissez le contenu de la modale -->
 <ng-template #content let-modal>
@@ -29,13 +30,13 @@
 <div  *ngIf="iiifEnabled">
 <!-- Afficher le contenu dans des onglets -->
   <ul ngbNav #nav="ngbNav" [(activeId)]="activeTab" class="nav-tabs" >
-    <li [ngbNavItem]="1"  >
+    <li [ngbNavItem]="1" [routerLink]="['.']" [queryParams]="{tab: 1}" routerLinkActive="active"  >
       <a ngbNavLink (click)="displaySection('calypso-mirador')">{{'calypso.onglet-fichier' | translate}}</a>
       <ng-template ngbNavContent>
         <!-- Cette section reste vide parce qu'elle affichera mirador -->
       </ng-template>
     </li>
-    <li [ngbNavItem]="2" >
+    <li [ngbNavItem]="2" [routerLink]="['.']" [queryParams]="{tab: 2}" routerLinkActive="active" >
       <a ngbNavLink (click)="hideSection('calypso-mirador')">{{'calypso.onglet-notice' | translate}}</a>
       <ng-template ngbNavContent>
         <!-- Afficher les métadonnées dans un tableau -->
@@ -58,7 +59,7 @@
         <!-- fin importation -->
       </ng-template>
     </li>
-    <li [ngbNavItem]="3" >
+    <li [ngbNavItem]="3" [routerLink]="['.']" [queryParams]="{tab: 3}" routerLinkActive="active" >
       <a ngbNavLink (click)="hideSection('calypso-mirador')">{{'calypso.onglet-autre' | translate}}</a>
       <ng-template ngbNavContent>
         <div class="table-responsive mt-2">
@@ -84,7 +85,7 @@
  <!-- Section specifique au onglet choisi -->
  <div [ngbNavOutlet]="nav" class="mt-2"></div>
 <!-- Section pour mirador -->
-  <div class="row" *ngIf="iiifEnabled">
+  <div class="row" *ngIf="iiifEnabled && (activeTab === 1 || !activeTab)">
     <div class="col-12" id="calypso-mirador">
       <ds-mirador-viewer id="iiif-viewer"
                          [object]="object"
