--- a/src/themes/calypso/app/shared/search/search-results/search-results.component.html
+++ b/src/themes/calypso/app/shared/search/search-results/search-results.component.html
@@ -1,7 +1,8 @@
 <div class="d-flex justify-content-between">
   <h2 *ngIf="!disableHeader">{{ (configuration ? configuration + '.search.results.head' : 'search.results.head') | translate }}</h2>
     <div class="align-items-end">
-      <img src="/assets/calypso/images/ia3.png" alt="Clip recherche Calypso" title="Rechercher avec CLIP " class="calypso-img-ia" (click)="openDialog(content)">
+      <!-- Icon made by Pixel perfect from www.flaticon.com -->
+      <img src="/assets/calypso/images/ai.png" alt="Clip recherche Calypso" title="Rechercher avec CLIP " class="calypso-img-ia" (click)="openDialog(content)">
       <ds-search-export-csv *ngIf="showCsvExport" [searchConfig]="searchConfig"></ds-search-export-csv>
       <!-- Définissez le contenu de la modale -->
       <ng-template #content let-modal>
