#Amiliorer la recherche en utilisant le premier bitstream du bundle ORIGINAL d'un ITEM comme référence pour trouver des images similaires dans la collection CLIP.

--- a/src/themes/calypso/app/clip-search/clip-search.component.scss
+++ b/src/themes/calypso/app/clip-search/clip-search.component.scss
@@ -41,4 +41,19 @@
     }
   }
 }
-
+p.promo {
+  font-size: 11px;
+  color: #fff;
+  width: 50%;
+  float: right;
+  display: block;
+  margin-right: -20px;
+  margin-top: -35px;
+  background: #f5650d;
+  padding: 6px;
+  box-shadow: 0 5px 8px #495057;
+  text-align: center;
+}
+h5 {
+  color: #052f4b!important;
+}
