--- a/src/themes/calypso/app/clip-search/clip-search.component.html
+++ b/src/themes/calypso/app/clip-search/clip-search.component.html
@@ -27,30 +27,32 @@
         </form>
       </div>
       <ng-container *ngIf="images$ | async as images; else loading">
-        <ng-container *ngFor="let clip of clips; let i = index;" >
+        <ng-container *ngFor="let clip of clips.slice(0, defaultItemCount); let i = index;">
           <!-- Ajoutez une condition *ngIf pour vérifier la présence de collection?.vedette -->
-          <div *ngIf="clip.pathFile" class="col-md-4">
+          <div *ngIf="clip.pathFile" [ngClass]="{'col-md-4': true}">
             <div class="card-calypso" [ngStyle]="{ 'background-image': 'url(' + clip.pathFile + ')' }">
-              <div class="specifies">
-                <a  [routerLink]="['/items/', clip.itemId]"><h2>{{clip.itemName}}</h2></a>
+              <div class="specifies" >
+                <p *ngIf="clip.pathFile && selectedImageId(clip.id)" class="promo">{{ 'calypso.clip-img-selection' | translate }}</p>
+                <a  [routerLink]="['/items/', clip.itemId]"><h5>{{clip.itemName}}</h5></a>
                 <ul>
                   <li>{{clip.description}}</li>
                 </ul>
-                <a class="calypso-card-lien"  [routerLink]="['/items/', clip.itemId]"> Voir plus</a>
+                <a class="btn btn-outline-dark btn-sm"  [routerLink]="['/items/', clip.itemId]"> {{ 'calypso.consulter' | translate }}</a>
               </div>
             </div>
           </div>
           <!-- Fin de la condition *ngIf -->
         </ng-container>
+        <button *ngIf="clips.length > defaultItemCount" (click)="loadMore()" class="btn btn-outline-warning btn-sm m-3">{{ 'calypso.clip-charger' | translate }}</button>
       </ng-container>
 
-      <ng-template #loading class="mt-5">
+      <ng-template #loading class="mt-5 pt-5">
         <!-- Indicateur de chargement -->
-        <div class="spinner-grow-sm text-info"></div>
-        <div class="spinner-grow-sm text-info"></div>
-        <div class="spinner-grow-sm text-info"></div>
-        <div class="spinner-grow-sm text-info"></div>
-        <div class="spinner-grow-sm text-info"></div>
+        <div class="spinner-grow text-info"></div>
+        <div class="spinner-grow text-info"></div>
+        <div class="spinner-grow text-info"></div>
+        <div class="spinner-grow text-info"></div>
+        <div class="spinner-grow text-info"></div>
       </ng-template>
     </div>
   </div>
