--- a/src/themes/calypso/styles/_calypso.scss
+++ b/src/themes/calypso/styles/_calypso.scss
@@ -130,7 +130,7 @@ a {
 .calypso-hide {
   display: none!important;
 }
-/* Style pour l'image de la recherche CLIP */
+/* Style pour l'image de la recherche Ai */
 .calypso-img-ia {
   width: 35px;
   height: 35px;
