--- a/src/themes/calypso/app/shared/search/search-results/search-results.component.html
+++ b/src/themes/calypso/app/shared/search/search-results/search-results.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">{{'calypso.clip-annuler' | translate}}Annuler</button>
-          <button type="button" class="btn btn-success" (click)="redirectToClipSearch()">{{'calypso.clip-lien' | translate}}</button>
+          <button type="button" class="btn btn-success" (click)="redirectToAiSearch()">{{'calypso.clip-lien' | translate}}</button>
         </div>
       </ng-template>
     </div>
