--- a/src/themes/calypso/app/ai-search/ai-search.component.html
+++ b/src/themes/calypso/app/ai-search/ai-search.component.html
@@ -10,17 +10,27 @@
         </div>
       <!-- Formulaire de recherche -->
       <div class="col-md-12 mb-3">
-        <form (ngSubmit)="onSearch()">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Recherche..." [(ngModel)]="searchQuery">
-            <!-- Affiche le bouton d'effacement si searchQuery a une valeur -->
-            <button class="btn btn-primary" type="submit">Rechercher</button>
-          </div>
+        <form #form="ngForm" (ngSubmit)="updateSearch(form.value)">
+            <div class="form-group input-group">
+              <div  class="input-group-prepend">
+                <button class="scope-button btn btn-outline-secondary text-truncate"
+                        [ngbTooltip]="dsoNameService.getName(selectedScope | async)" type="button"
+                        (click)="openScopeModal()">
+                  {{dsoNameService.getName(selectedScope | async) || ('search.form.scope.all' | translate)}}
+                </button>
+              </div>
+              <input type="text" [(ngModel)]="searchQuery" name="query" class="form-control" [attr.data-test]="'search-box' | dsBrowserOnly">
+              <span class="input-group-append">
+            <button type="submit" class="search-button btn btn-primary" [attr.data-test]="'search-button' | dsBrowserOnly">
+              <i class="fas fa-search"></i> {{ ('search.form.search' | translate) }}
+            </button>
+          </span>
+            </div>
           <div class="filters-list" *ngIf="searchQuery">
             <ul id="firstRowFilter">
               <li  style="display: flex;">
                 <a>{{searchQuery}}</a>
-                <button class="toggle-filters-btn" (click)="clearSearchQuery()" ><i class="fa fa-times fm-2"></i></button>
+                <button class="toggle-filters-btn" (click)="clearSearchQuery();updateSearch(form.value)" ><i class="fa fa-times fm-2"></i></button>
               </li>
             </ul>
           </div>
