--- a/src/themes/calypso/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/calypso/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -6,13 +6,13 @@
 <!-- Définissez le contenu de la modale -->
 <ng-template #content let-modal>
   <div class="modal-header">
-    <h4 class="modal-title">{{'calypso.clip-titre' | translate}}</h4>
+    <h4 class="modal-title">{{'calypso.ai-titre' | translate}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    {{'calypso.clip-explication' | translate}}
+    {{'calypso.ai-explication' | translate}}
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">{{'calypso.clip-annuler' | translate}}Annuler</button>
