--- a/src/themes/calypso/app/home-page/vedette-liste/vedette-liste.component.scss
+++ b/src/themes/calypso/app/home-page/vedette-liste/vedette-liste.component.scss
@@ -24,7 +24,9 @@
   font-size: 24px;
   margin-bottom: 10px;
 }
-
+.carousel-caption h3 a{
+  text-decoration: none!important;
+}
 .carousel-caption p {
   font-size: 16px;
   margin: 0;
